<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"

android:layout_width="match_parent"
android:layout_height="match_parent"

tools:context=".Pro1.Pro1">>

<ImageView
    android:id="@+id/imgpro1"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:background="@drawable/pro1"
    android:scaleType="fitCenter"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.4"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:src="@drawable/cross"
    app:layout_constraintEnd_toEndOf="@id/imgpro1"
    app:layout_constraintTop_toTopOf="@+id/imgpro1" />

<ImageView
    android:id="@+id/imageView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/pro1_1"
    app:layout_constraintEnd_toStartOf="@+id/imageView8"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imgpro1" />

<ImageView
    android:id="@+id/imageView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/pro1_2"
    app:layout_constraintEnd_toStartOf="@+id/imageView9"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/imageView7"
    app:layout_constraintTop_toBottomOf="@+id/imgpro1" />

<ImageView
    android:id="@+id/imageView9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/pro1_3"
    app:layout_constraintEnd_toStartOf="@+id/imageView10"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/imageView8"
    app:layout_constraintTop_toBottomOf="@+id/imgpro1" />

<ImageView
    android:id="@+id/imageView10"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/pro1_4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/imageView9"
    app:layout_constraintTop_toBottomOf="@+id/imgpro1" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/urbanist"
    android:text="@string/pro1"
    android:textAlignment="center"
    android:textColor="#212121"
    android:textStyle="bold"
    android:maxLines="2"
    android:id="@+id/text"
    android:layout_marginTop="30dp"
    android:textSize="20sp"
    app:layout_constraintTop_toBottomOf="@+id/imageView8"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>
<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/text"
    android:layout_marginTop="30dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:id="@+id/radiogroup"
    app:layout_constraintStart_toStartOf="parent">

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_bg"
        android:buttonTint="#4B68FF"
        android:text="@string/rs499"
        android:textColor="#9F9F9F" />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9F9F9F"
        android:buttonTint="#4B68FF"
        android:layout_marginVertical="10dp"
        android:background="@drawable/radio_bg"
        android:id="@+id/radio2"

        android:text="@string/rs4500"/>

    <RadioButton
        android:id="@+id/radio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radio_bg"
        android:buttonTint="#4B68FF"
        android:text="@string/rs2999"
        android:textColor="#9F9F9F"
        />
</RadioGroup>

<TextView
    android:layout_width="0dp"
    android:layout_height="40dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintWidth_percent="0.7"
    android:text="@string/continue1"
    android:layout_marginTop="20dp"
    android:textAlignment="center"
    android:textSize="16sp"
    android:paddingTop="8dp"
    android:textStyle="bold"
    android:fontFamily="@font/urbanist"
    android:id="@+id/btn_continue"
    android:textColor="@color/white"
    android:background="@drawable/next_btn_bg"
    app:layout_constraintTop_toBottomOf="@id/radiogroup"/>
<LinearLayout
    android:layout_width="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/btn_continue"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="30dp"
    android:layout_height="wrap_content" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termofuse"
        android:layout_marginEnd="10dp"
        android:textColor="#212121"/>
    <TextView
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:text="|"
        android:textColor="#212121"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacypolicy"
        android:layout_marginLeft="10dp"
        android:textColor="#212121"/>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>